# fountainflow

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.github/: README.md
src/: block.rs  cli.rs  decoder.rs  distribution.rs  encoder.rs  fountain.rs  lib.rs  linear_algebra.rs  main.rs  systematic.rs  tables.rs  transport.rs
